# defer.c

./: CMakeLists.txt  Dockerfile  Makefile  README  README.txt  demo.c  lsan.supp  main.c  suppr.txt
docs/: compiler-options.md
src/: defer.c  defer.h  main.c
test/: test_defer.c
